Update API_KEY and ALBUM_ID in index.html

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
     <script>
         // НАСТРОЙКИ API
-        const API_KEY = 'ВАШ_API_KEY'; // Замените на ваш ключ
-        const ALBUM_ID = 'ID_АЛЬБОМА';   // Замените на ID альбома
+        const API_KEY = 'priv_5d07e1a9eaec9dcb_cc0d2877fbe8fdd176da63381603074c1f8ce3f5c639eacdb4d7c6d578a29982'; // Замените на ваш ключ
+        const ALBUM_ID = 'vblzrzpgm83r';   // Замените на ID альбома
 
         async function fetchAlbumMedia() {
             const url = `https://public-api.joinswsh.com/album/getPhotos?albumId=${ALBUM_ID}`;
