--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ async function fetchAlbumMedia() {
         const response = await fetch(proxyUrl, {
             method: 'GET',
             headers: {
-                'x-api-key': priv_5d07e1a9eaec9dcb_cc0d2877fbe8fdd176da63381603074c1f8ce3f5c639eacdb4d7c6d578a29982, // Проверьте, что в ключе нет лишних пробелов
+                'x-api-key': API_KEY, // Проверьте, что в ключе нет лишних пробелов
                 'Accept': 'application/json'
             }
         });
